8139352: java/net/InetAddress/getOriginalHostName.java fails to compile
Reviewed-by: mchung, henryjen